@@ -115,6 +115,7 @@ all_tests = \
   tests/find/exec-plus-last-file.sh \
   tests/find/refuse-noop.sh \
   tests/find/debug-missing-arg.sh \
+  tests/xargs/verbose-quote.sh \
   $(all_root_tests)
 
 $(TEST_LOGS): $(PROGRAMS)
