@@ -1093,7 +1093,9 @@ print_args (bool ask)
 
   for (i = 0; i < bc_state.cmd_argc - 1; i++)
     {
-      if (fprintf (stderr, "%s ", bc_state.cmd_argv[i]) < 0)
+      if (fprintf (stderr, "%s ",
+	           quotearg_n_style (0, shell_escape_quoting_style,
+		                     bc_state.cmd_argv[i])) < 0)
 	die (EXIT_FAILURE, errno, _("Failed to write to stderr"));
     }
 
